--- a/provider-gcp/package/crds/kms.gcp.upbound.io_secretciphertexts.yaml
+++ b/provider-gcp/package/crds/kms.gcp.upbound.io_secretciphertexts.yaml
@@ -162,8 +162,7 @@ spec:
                     type: object
                   plaintext:
                     description: 'The plaintext to be encrypted. Note: This property
-                      is sensitive and will not be displayed in the plan. The plaintext
-                      to be encrypted.'
+                      is sensitive and will not be displayed in the plan.'
                     type: string
                 required:
                 - plaintext
