--- a/provider-gcp/examples-generated/appengine/application.yaml
+++ b/provider-gcp/examples-generated/appengine/application.yaml
@@ -25,8 +25,8 @@ metadata:
   name: my-project
 spec:
   forProvider:
+    name: My Project
     orgId: "1234567"
-    projectId: your-project-id
 
 ---
 
