--- a/provider-gcp/examples/sql/database.yaml
+++ b/provider-gcp/examples/sql/database.yaml
@@ -1,6 +1,8 @@
 apiVersion: sql.gcp.upbound.io/v1beta1
 kind: Database
 metadata:
+  annotations:
+    meta.upbound.io/example-id: sql/v1beta1/database
   labels:
     testing.upbound.io/example-name: example_database
   # ${Rand...} is not valid YAML and is used with automated testing
