--- a/provider-gcp/examples/sql/sslcert.yaml
+++ b/provider-gcp/examples/sql/sslcert.yaml
@@ -1,6 +1,8 @@
 apiVersion: sql.gcp.upbound.io/v1beta1
 kind: SSLCert
 metadata:
+  annotations:
+    meta.upbound.io/example-id: sql/v1beta1/sslcert
   labels:
     testing.upbound.io/example-name: example_cert
   name: example-cert
