gcp: Configure storage

--- a/provider-gcp/examples/storage/bucket.yaml
+++ b/provider-gcp/examples/storage/bucket.yaml
@@ -21,7 +21,7 @@ spec:
       responseHeader:
       - '*'
     forceDestroy: true
-    location: EU
+    location: US
     uniformBucketLevelAccess: true
     website:
     - mainPageSuffix: index.html
