--- a/provider-gcp/examples/storage/defaultobjectacl.yaml
+++ b/provider-gcp/examples/storage/defaultobjectacl.yaml
@@ -3,15 +3,14 @@ kind: DefaultObjectACL
 metadata:
   annotations:
     meta.upbound.io/example-id: storage/v1beta1/defaultobjectacl
-    upjet.upbound.io/manual-intervention: "Doesn't work in automated for an unknown reason."
   labels:
-    testing.upbound.io/example-name: image-store-default-acl
-  name: image-store-default-acl
+    testing.upbound.io/example-name: default-object-acl
+  name: default-object-acl
 spec:
   forProvider:
     bucketSelector:
       matchLabels:
-        testing.upbound.io/example-name: image-store-default
+        testing.upbound.io/example-name: default-object-acl
     roleEntity:
     - READER:allAuthenticatedUsers
 
@@ -23,8 +22,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: storage/v1beta1/defaultobjectacl
   labels:
-    testing.upbound.io/example-name: image-store-default
-  name: image-store-${Rand.RFC1123Subdomain}
+    testing.upbound.io/example-name: default-object-acl
+  name: default-object-acl-${Rand.RFC1123Subdomain}
 spec:
   forProvider:
-    location: EU
+    location: US
