--- a/provider-gcp/examples/compute/managedsslcertificate.yaml
+++ b/provider-gcp/examples/compute/managedsslcertificate.yaml
@@ -2,6 +2,7 @@ apiVersion: compute.gcp.upbound.io/v1beta1
 kind: ManagedSSLCertificate
 metadata:
   annotations:
+    upjet.upbound.io/manual-intervention: "The provisioning process can complete only when the domain name for which the certificate is created points to a target pool which, itself, points at the certificate"
     meta.upbound.io/example-id: compute/v1beta1/managedsslcertificate
   labels:
     testing.upbound.io/example-name: managed-ssl-certificate
@@ -10,4 +11,4 @@ spec:
   forProvider:
     managed:
     - domains:
-      - example.com.
+      - test.example.com.
