--- a/provider-gcp/examples/container/cluster.yaml
+++ b/provider-gcp/examples/container/cluster.yaml
@@ -4,50 +4,10 @@ metadata:
   annotations:
     meta.upbound.io/example-id: container/v1beta1/cluster
   labels:
-    testing.upbound.io/example-name: example_gke_cluster
-  name: example-gke-cluster
+    testing.upbound.io/example-name: cluster
+  name: cluster
 spec:
   forProvider:
     initialNodeCount: 1
-    location: us-central1
-    removeDefaultNodePool: true
-
----
-
-apiVersion: container.gcp.upbound.io/v1beta1
-kind: NodePool
-metadata:
-  annotations:
-    meta.upbound.io/example-id: container/v1beta1/cluster
-  labels:
-    testing.upbound.io/example-name: example_gke_preemptible_nodes
-  name: example-gke-preemptible-nodes
-spec:
-  forProvider:
-    clusterSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example_gke_cluster
-    location: us-central1
-    nodeConfig:
-    - machineType: e2-medium
-      oauthScopes:
-      - https://www.googleapis.com/auth/cloud-platform
-      preemptible: true
-      serviceAccountSelector:
-        matchLabels:
-          testing.upbound.io/example-name: example_gke_cluster_sa
-    nodeCount: 1
-
----
-
-apiVersion: cloudplatform.gcp.upbound.io/v1beta1
-kind: ServiceAccount
-metadata:
-  annotations:
-    meta.upbound.io/example-id: container/v1beta1/cluster
-  labels:
-    testing.upbound.io/example-name: example_gke_cluster_sa
-  name: example-gke-cluster-sa
-spec:
-  forProvider:
-    displayName: Service Account for Upbound example GKE Cluster
+    location: us-central1-a
+    removeDefaultNodePool: false
