--- a/provider-gcp/examples/container/nodepool.yaml
+++ b/provider-gcp/examples/container/nodepool.yaml
@@ -4,13 +4,13 @@ metadata:
   annotations:
     meta.upbound.io/example-id: container/v1beta1/nodepool
   labels:
-    testing.upbound.io/example-name: example_gke_nodepool
-  name: example-gke-nodepool
+    testing.upbound.io/example-name: nodepool
+  name: nodepool
 spec:
   forProvider:
     clusterSelector:
       matchLabels:
-        testing.upbound.io/example-name: example_gke_cluster
+        testing.upbound.io/example-name: nodepool
     nodeConfig:
     - machineType: e2-medium
       oauthScopes:
@@ -18,5 +18,35 @@ spec:
       preemptible: true
       serviceAccountSelector:
         matchLabels:
-          testing.upbound.io/example-name: example_gke_cluster_sa
+          testing.upbound.io/example-name: nodepool
     nodeCount: 1
+
+---
+
+apiVersion: container.gcp.upbound.io/v1beta1
+kind: Cluster
+metadata:
+  annotations:
+    meta.upbound.io/example-id: container/v1beta1/cluster
+  labels:
+    testing.upbound.io/example-name: nodepool
+  name: nodepool
+spec:
+  forProvider:
+    initialNodeCount: 1
+    location: us-central1-a
+    removeDefaultNodePool: true
+
+---
+
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  annotations:
+    meta.upbound.io/example-id: container/v1beta1/nodepool
+  labels:
+    testing.upbound.io/example-name: nodepool
+  name: nodepool
+spec:
+  forProvider:
+    displayName: Service Account for GKE Cluster
