gcp: Move Environment to us-east1 to not conflict with Cluster

--- a/provider-gcp/examples/composer/environment.yaml
+++ b/provider-gcp/examples/composer/environment.yaml
@@ -8,7 +8,7 @@ metadata:
   name: composer-environment
 spec:
   forProvider:
-    region: us-central1
+    region: us-east1
     config:
       - nodeConfig:
         - ipAllocationPolicy:
