--- a/provider-gcp/examples/compute/network.yaml
+++ b/provider-gcp/examples/compute/network.yaml
@@ -2,6 +2,7 @@ apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Network
 metadata:
   annotations:
+    upjet.upbound.io/timeout: "2400"
     meta.upbound.io/example-id: compute/v1beta1/network
   labels:
     testing.upbound.io/example-name: example_network
