Apply suggestions from code review
Co-authored-by: Donovan Muller <donovan.muller@gmail.com>

Co-authored-by: ezgidemirel <ezgidemirel91@gmail.com>

chore: merge conflicts

-

--- a/provider-gcp/package/crds/secretmanager.gcp.upbound.io_secretversions.yaml
+++ b/provider-gcp/package/crds/secretmanager.gcp.upbound.io_secretversions.yaml
@@ -90,8 +90,7 @@ spec:
                     - namespace
                     type: object
                   secretRef:
-                    description: Reference to a Secret in secretmanager to populate
-                      secret.
+                    description: Reference to a Secret to populate secret.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -125,8 +124,7 @@ spec:
                     - name
                     type: object
                   secretSelector:
-                    description: Selector for a Secret in secretmanager to populate
-                      secret.
+                    description: Selector for a Secret to populate secret.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
