--- a/provider-gcp/package/crds/storage.gcp.upbound.io_defaultobjectacls.yaml
+++ b/provider-gcp/package/crds/storage.gcp.upbound.io_defaultobjectacls.yaml
@@ -69,7 +69,7 @@ spec:
                     description: The name of the bucket it applies to.
                     type: string
                   bucketRef:
-                    description: Reference to a Bucket to populate bucket.
+                    description: Reference to a Bucket in storage to populate bucket.
                     properties:
                       name:
                         description: Name of the referenced object.
@@ -103,7 +103,7 @@ spec:
                     - name
                     type: object
                   bucketSelector:
-                    description: Selector for a Bucket to populate bucket.
+                    description: Selector for a Bucket in storage to populate bucket.
                     properties:
                       matchControllerRef:
                         description: MatchControllerRef ensures an object with the
