--- a/provider-gcp/package/crds/compute.gcp.upbound.io_serviceattachments.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_serviceattachments.yaml
@@ -279,6 +279,7 @@ spec:
                 required:
                 - connectionPreference
                 - enableProxyProtocol
+                - region
                 type: object
               providerConfigRef:
                 default:
