all: add user-agent headers for Terraform to send Upbound and UXP information to cloud providers
Signed-off-by: Muvaffak Onus <me@muvaf.com>

--- a/provider-gcp/cluster/images/provider-gcp/Dockerfile
+++ b/provider-gcp/cluster/images/provider-gcp/Dockerfile
@@ -8,6 +8,7 @@ ENV USER_ID=1001
 # Setup Terraform environment
 
 ## Provider-dependent configuration
+ARG CROSSPLANE_PROVIDER_VERSION
 ARG TERRAFORM_VERSION
 ARG TERRAFORM_PROVIDER_SOURCE
 ARG TERRAFORM_PROVIDER_VERSION
@@ -41,6 +42,7 @@ ENV TERRAFORM_VERSION ${TERRAFORM_VERSION}
 ENV TERRAFORM_PROVIDER_SOURCE ${TERRAFORM_PROVIDER_SOURCE}
 ENV TERRAFORM_PROVIDER_VERSION ${TERRAFORM_PROVIDER_VERSION}
 ENV TERRAFORM_NATIVE_PROVIDER_PATH ${PLUGIN_DIR}/${TERRAFORM_PROVIDER_DOWNLOAD_NAME}_v${TERRAFORM_PROVIDER_VERSION}_x5
+ENV GOOGLE_TERRAFORM_USERAGENT_EXTENSION "upbound-provider-gcp/${CROSSPLANE_PROVIDER_VERSION} universal-crossplane"
 
 USER ${USER_ID}
 EXPOSE 8080
