--- a/provider-gcp/examples/dialogflowcx/version.yaml
+++ b/provider-gcp/examples/dialogflowcx/version.yaml
@@ -4,15 +4,15 @@ metadata:
   annotations:
     meta.upbound.io/example-id: dialogflowcx/v1beta1/version
   labels:
-    testing.upbound.io/example-name: version_1
-  name: version-1
+    testing.upbound.io/example-name: version
+  name: version
 spec:
   forProvider:
     description: version 1.0.0
     displayName: 1.0.0
     parentSelector:
       matchLabels:
-        testing.upbound.io/example-name: agent
+        testing.upbound.io/example-name: version
 
 ---
 
@@ -22,14 +22,14 @@ metadata:
   annotations:
     meta.upbound.io/example-id: dialogflowcx/v1beta1/version
   labels:
-    testing.upbound.io/example-name: agent
-  name: agent
+    testing.upbound.io/example-name: version
+  name: version
 spec:
   forProvider:
     avatarUri: https://cloud.google.com/_static/images/cloud/icons/favicons/onecloud/super_cloud.png
     defaultLanguageCode: en
     description: Example description.
-    displayName: dialogflowcx-agent
+    displayName: version
     enableSpellCorrection: true
     enableStackdriverLogging: true
     location: global
