--- a/provider-gcp/examples/dialogflowcx/agent.yaml
+++ b/provider-gcp/examples/dialogflowcx/agent.yaml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     meta.upbound.io/example-id: dialogflowcx/v1beta1/agent
   labels:
-    testing.upbound.io/example-name: full_agent
-  name: full-agent
+    testing.upbound.io/example-name: agent
+  name: agent
 spec:
   forProvider:
     avatarUri: https://cloud.google.com/_static/images/cloud/icons/favicons/onecloud/super_cloud.png
     defaultLanguageCode: en
     description: Example description.
-    displayName: dialogflowcx-agent
+    displayName: agent
     enableSpellCorrection: true
     enableStackdriverLogging: true
     location: global
